--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react-icons": "^4.4.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.2",
+    "react-star-ratings": "^2.3.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-star-ratings": "^2.3.0",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.1.0",
     "typescript": "^4.6.4",
