--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.0",
+    "antd": "^4.23.6",
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-debounce-input": "^3.3.0",
