--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-loading": "^2.0.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.2",
     "react-star-ratings": "^2.3.0",
