--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-loading": "^2.0.3",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.2",
     "react-star-ratings": "^2.3.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "swiper": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
